<resources>
    <string name="app_name">NewsCast</string>

    <!--  TITLE  -->
    <string name="title_playback">Player</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_item">Item</string>
    <string name="title_today">Today</string>
    <string name="title_setup">Setup</string>
    <string name="title_reload">Reload</string>
    <string name="title_subscribe">Subscribe</string>
    <string name="title_person">Person</string>
    <string name="title_player">Player</string>
    <string name="title_channel">Channel</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_download">Download</string>

    <!--  TAB  -->
    <string name="tab_channel">Channel</string>
    <string name="tab_calendar">Calendar</string>
    <string name="tab_favourite">Favourite</string>
    <string name="tab_person">Person</string>
    <string name="tab_date">Date</string>
    <string name="tab_playlist">Playlist</string>
    <string name="tab_personal">Personal</string>

    <!--  BUTTON  -->
    <string name="button_backward">BACKWARD</string>
    <string name="button_play">PLAY</string>
    <string name="button_pause">PAUSE</string>
    <string name="button_stop">STOP</string>
    <string name="button_forward">FORWARD</string>
    <string name="button_sort">SORT</string>
    <string name="button_swap">SWAP</string>
    <string name="button_reload">RELOAD</string>
    <string name="button_add">ADD</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_close">CLOSE</string>
    <string name="button_save">SAVE</string>
    <string name="button_default">DEFAULT</string>
    <string name="button_eject">EJECT</string>
    <string name="button_undo">UNDO</string>
    <string name="button_fetch">FETCH</string>
    <string name="button_editor">Editor</string>
    <string name="button_favourite">Favourite</string>
    <string name="button_downloaded">Downloaded</string>
    <string name="button_return">Return</string>

    <!--  ICON DESCRIPTION  -->
    <string name="icon_go">Go</string>
    <string name="icon_love">Love</string>
    <string name="icon_star">Star</string>
    <string name="icon_download">Download</string>
    <string name="icon_tick">Tick</string>
    <string name="icon_remove">Remove</string>

    <!--  NOTICE  -->
    <string name="hello_world">Hello World</string>
    <string name="enter_rss_address">Enter RSS Address</string>
    <string name="choose_date">Choose Date</string>

    <!--  ALERT  -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="leaving">…Leaving…</string>
    <string name="stopping">…Stopping…</string>
    <string name="deleting">…Deleting…</string>
    <string name="not_found">…Not Found…</string>
    <string name="not_supported">…Not Supported…</string>
    <string name="not_available">…Not Available…</string>
    <string name="ready">…Ready…</string>
    <string name="waiting">…Waiting…</string>
    <string name="loading">…Loading…</string>
    <string name="buffering">…Buffering…</string>
    <string name="initialising">…Initialising…</string>
    <string name="downloaded">…Downloaded…</string>
    <string name="initialising_failed">…Initialising Failed…</string>
    <string name="downloading">…Downloading…</string>
    <string name="downloading_failed">…Downloading Failed…</string>
    <string name="empty">…Empty…</string>
    <string name="dao_clean_up">…DAO Clean Up…</string>
    <string name="dao_fetch">…DAO Fetch…</string>
    <string name="xml_fetch">…XML Fetch…</string>
    <string name="dao_insert">…DAO Insert…</string>
    <string name="dao_update">…DAO Update…</string>
    <string name="invalid_link">…Invalid Link…</string>
    <string name="fetching">…Fetching…</string>
    <string name="favourite">Favourite</string>
    <string name="show_favourite">Show Favourite</string>
    <string name="show_downloaded">Show Downloaded</string>
    <string name="title_remove">Remove</string>
    <string name="only_audio_available">Only Audio Available</string>
    <string name="only_text_available">Only Text Available</string>
    <string name="reloading">…Reloading…</string>
    <string name="icon_share">Share</string>
    <string name="share">Share</string>
    <string name="open_in">Open In…</string>

    <!-- FIREBASE -->


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <!--<string name="loading">Loading…</string>-->
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="back_to_personal">Back To Personal</string>
    <string name="go_to_account">Go To Account</string>
    <string name="email_verified">Email Verified</string>
    <string name="firebase_logo">FireBase Logo</string>

</resources>
