<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/colorHeadBar"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:paddingTop="12dp"
            android:paddingBottom="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/colorHeadFront"/>

        <ImageView
            android:id="@+id/firebase_image_backup"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="12dp"
            android:contentDescription="@string/button_save"
            app:srcCompat="@drawable/ic_backup"/>

        <ImageView
            android:id="@+id/firebase_image_restore"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="12dp"
            android:contentDescription="@string/button_default"
            app:srcCompat="@drawable/ic_backup_restore"/>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_core_personal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/firebase_image_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_newscast_logo_white"
            android:contentDescription="@string/firebase_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ProgressBar
            android:id="@+id/firebase_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/firebase_status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorButtonBar">

        <TextView
            android:layout_weight="1"
            android:id="@+id/firebase_text_user_info"
            style="@style/ThemeOverlay.MyTextDetail"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/signed_out"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/firebase_text_user_id"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/firebase_input_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/colorButtonBar">

        <EditText
            android:id="@+id/firebase_edit_email"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/firebase_edit_password"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/firebase_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@color/colorButtonBar">

        <Button
            android:id="@+id/firebase_btn_sign_in"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/firebase_btn_create_account"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/firebase_btn_verify_email"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/verify_email"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/firebase_btn_sign_out"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_toolbar_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorButtonBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_channel_personal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                android:contentDescription="@string/tab_channel"
                android:paddingTop="5dp"
                app:srcCompat="@drawable/ic_dashboard_pale" />

            <ImageView
                android:id="@+id/iv_calendar_personal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:contentDescription="@string/tab_calendar"
                app:srcCompat="@drawable/ic_view_day_pale"/>

            <ImageView
                android:id="@+id/iv_favourite_personal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:contentDescription="@string/tab_favourite"
                app:srcCompat="@drawable/ic_featured_play_list_pale"/>

            <ImageView
                android:id="@+id/iv_person_personal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:contentDescription="@string/tab_person"
                app:srcCompat="@drawable/ic_person"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="2dp"
                android:text="@string/tab_channel"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="2dp"
                android:text="@string/tab_date"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="2dp"
                android:text="@string/tab_playlist"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="2dp"
                android:text="@string/tab_personal"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>